--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
        buildFeatures{
                viewBinding true
            }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -41,13 +44,25 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.databinding:databinding-runtime:7.4.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    //gestion json
+    implementation 'com.google.code.gson:gson:2.10.1'
+    //api
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 
     //navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
-    //floating menu
+    //retrofit , no lo uso aun
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //Base de datos
+    implementation 'androidx.sqlite:sqlite:2.3.1'
+
+
 
 }
