--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,18 @@
         android:theme="@style/Theme.AppCompat.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activities.BuchVorlage"
+            android:name=".activities.InfoAuthorActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activities.Bucher_Liste"
+            android:name=".activities.BuchVorlage"
+            android:exported="false" />
+        <activity
+            android:name=".activities.Bucher_Liste"
             android:exported="false"
             android:label="@string/title_activity_liste_bucher"
             android:theme="@style/NoActionBar" />
         <activity
-            android:name=".ui.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
